<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistryProfessionalInformationFragment"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passo_tres"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:fontFamily="@font/damion_regular"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvw_falar_do_seu_trabalho"
        android:id="@+id/tvw_passo_tres"
        />
    <TextView
        android:id="@+id/tvw_falar_do_seu_trabalho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/falar_do_seu_trabalho"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvw_passo_tres"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvw_falar_do_seu_trabalho"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:hintTextAppearance="@style/HintColor"
            app:boxBackgroundColor="@color/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_sua_profissao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sua_profissao"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:hintTextAppearance="@style/HintColor"
            app:boxBackgroundColor="@color/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_n_registro_conselho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_seu_registro_conselho"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:hintTextAppearance="@style/HintColor"
            app:boxBackgroundColor="@color/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_uf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_uf"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <com.google.android.material.button.MaterialButton
            style="@style/OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_voltar"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            android:id="@+id/btn_voltar_to_personal"
            android:layout_marginEnd="10dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_finalizar"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            android:id="@+id/btn_continuar_to_finalizar"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>