<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistryPersonalInformationFragment"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passo_dois"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:fontFamily="@font/damion_regular"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvw_get_credential"
        android:id="@+id/tvw_passo_dois"
        />
    <TextView
        android:id="@+id/tvw_podemos_nos_apresentar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_podemos_nos_apresentar"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvw_passo_dois"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvw_podemos_nos_apresentar"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:hintTextAppearance="@style/HintColor"
            app:boxBackgroundColor="@color/colorAccent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_seu_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_seu_nome"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:hintTextAppearance="@style/HintColor"
            app:boxBackgroundColor="@color/colorAccent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_sua_data_nascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_data_de_nascimento"
                android:inputType="date"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spn_reg_pessoal_sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dropdown"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <com.google.android.material.button.MaterialButton
            style="@style/OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            android:id="@+id/btn_voltar_to_login"
            android:layout_marginEnd="10dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_continuar"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            android:id="@+id/btn_continuar_to_professional"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>